--- a/kiiinveeey/src/main/res/layout/menus.xml
+++ b/kiiinveeey/src/main/res/layout/menus.xml
@@ -46,4 +46,22 @@
         android:layout_alignLeft="@+id/Qr_scan"
         android:layout_alignStart="@+id/Qr_scan"
         android:layout_marginTop="18dp" />
+
+    <TextView
+        android:id="@+id/id_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Qr_txt"
+        android:layout_alignLeft="@+id/Qr_txt"
+        android:layout_alignStart="@+id/Qr_txt"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:id="@+id/pass_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/id_txt"
+        android:layout_alignLeft="@+id/id_txt"
+        android:layout_alignStart="@+id/id_txt"
+        android:layout_marginTop="20dp" />
 </RelativeLayout>
